@@ -1,3 +1,7 @@
+[B]1.4.3[/B]
+- fixed: use imdb ID from nfo
+- changed: scrape only one studio
+
 [B]1.4.2[/B]
 - fixed: url/mixed nfo scraping
 
